# batram

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
docs/: gen_ref_pages.py  index.md
notebooks/: climate-data-application.ipynb  climate-example-mb.ipynb  climate-example.ipynb  fit-esitmable-shrinkage-tm.ipynb  fit-shrinkage-tm.ipynb  getting-started-mvtm.ipynb  getting-started.ipynb  intuition.ipynb  linear.ipynb  maxmin-order-plot.ipynb  nonlinear.ipynb  plot-logscores.ipynb  sim_plots.ipynb  tutorial-mf.ipynb  use-fit.ipynb
scripts/: README.md  get_gcm_rcm.py  make_data.py  run_ensemble_VAE_climate.py  run_ensemble_VAE_linear.py  run_ensemble_VAE_min.py  run_ensemble_hk_climate.py  run_ensemble_hk_linear.py  run_ensemble_hk_min.py  run_ensemble_matern_linear.py  run_ensemble_matern_min.py  run_ensemble_mf_climate.py  run_ensemble_mf_linear.py  run_ensemble_mf_min.py  run_ensemble_nargp_climate.py  run_ensemble_nargp_linear.py  run_ensemble_nargp_min.py  run_hk.py  run_matern.py  run_mf.py  run_nargp.py  run_vae.py
scripts/results/: logscores_VAE_climate.csv  logscores_VAE_linear.csv  logscores_VAE_min.csv  logscores_hk_climate.csv  logscores_hk_linear.csv  logscores_hk_min.csv  logscores_matern_linear.csv  logscores_matern_min.csv  logscores_mf_climate.csv  logscores_mf_climate_allfields.csv  logscores_mf_linear.csv  logscores_mf_linear_allfields.csv  (+10 more)
tests/: __init__.py  test_base_functions.py  test_datautils.py  test_gpcov.py  test_legacy.py  test_legmods.py  test_likelihood.py  test_process_positions.py
(+29 files in other folders)
